2008-06-07  Franz Holzinger  <contact@fholzinger.com>
	* fix bug 7930: return the resulting selected array in the methods buildStaticInfoSelector and optionsConstructor
	* new method needsInit which tells if the object has already been initialised
	* fix bug 8347: Vorarlberg is correct for VB in Austria
	* fix bug 8594: no default zone must be used if it does not fit to the default country

2008-04-26  Franz Holzinger  <contact@fholzinger.com>
	* fix bug 7930: default values for country zones and currencies have been wrong
	* move static_taxes into a separate extension static_info_tables_taxes

2008-03-15  Franz Holzinger  <contact@fholzinger.com>
	* fix bug 6059: Static_country_zones Canada wrong ISO-Nr
	* set default country to DEU and contry zone to NRW because most persons using TYPO3 live here
	* set default language to EN because most persons using TYPO3 understand English
	* add a $conf parameter to the init routine. Other extensions may override the setup now.
	* fix bug with not set default country
	* fix bug with not getting rid of the div extension
	* replace $TYPO3_CONF_VARS by $GLOBALS['TYPO3_CONF_VARS'] because some PHP5 versions loose its value

2007-12-16  Franz Holzinger  <kontakt@fholzinger.com>
	* remove dependancy from div extension
	* new feature charset: extension setup for the character set of the tables
	* fix bug with wrong '1 AND ...' SQL query with itemsProcFunc_config.hotlistOnly
	* change Galician language
	* fix bug 4589 with wrong SQL when no country code is available
	* new feature: mutliple countries and languages can be selected at once

2007-08-03  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Updated static_markets

2007-07-17  Franz Holzinger  <kontakt@fholzinger.com>
	* new function fetchCountries to get a list of countries which match the parameters

2007-06-19  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Updated static_markets

2007-06-16  Franz Holzinger  <kontakt@fholzinger.com>